

[package]
name = "rust-multiplexing-stream"
version = "0.1.0"
authors = ["Irek Nigmatullin <nigma143@mail.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = { version = "0.3.*" }
tokio = { version = "1.12.0", features = ["full"] }
triggered = "0.1.2"
rmp = "0.8.10"

ws_stream_tungstenite = "0.6.1"
async-tungstenite ={ version = "0.13.0", features = ["tokio-runtime", "async-std-runtime"] }
