

[package]
name = "rust-multiplexing-stream"
version = "0.1.0"
authors = ["Irek Nigmatullin <nigma143@mail.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = { version = "0.3.*" }
tokio = { version = "1.12.0", features = ["full"] }
tokio-util = { version = "0.6.8", features = ["compat"] }
triggered = "0.1.2"
rmp-futures = "0.2.0"
rmp = "0.8.10"

bytes = "1.1.0"

rustls = { version = "0.20", default-features = false }
tokio-rustls = { git = "https://github.com/tokio-rs/tls", branch = "master" }
rustls-pemfile = "0.2.1"


ws_stream_tungstenite = "0.6.1"
async-tungstenite ={ version = "0.13.0", features = ["tokio-runtime", "async-std-runtime"] }
